--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// ref: https://stackoverflow.com/questions/39892622/plugin-with-id-com-google-gms-google-services-not-found
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
+    id 'com.google.gms.google-services' version '4.3.13' apply false
 }
 
 task clean(type: Delete) {
