--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,15 @@
         android:theme="@style/Theme.RateMyToilet"
         tools:targetApi="31">
         <activity
-            android:name=".launch.ConfirmEmailActivity"
-            android:exported="false">
+            android:name=".launch.ConfirmPhoneActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".launch.RegisterEmailActivity"
+            android:name=".launch.PhoneActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
             <meta-data
