add in review object and respective repositories.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,9 @@ dependencies {
     // Add the dependency for the Realtime Database library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    // Lifecycle components ref: https://www.sfu.ca/~xingdong/Teaching/CMPT362/lecture15/lecture15.html
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 }
