Finished addNewLoaction UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ListActivity"
+            android:name=".WashroomListActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
