--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
     implementation 'com.google.android.material:material:1.7.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
