--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -78,6 +79,8 @@
         <activity android:name=".NormalUserAddReviewActivity"
             android:label="Review Washroom"
             android:parentActivityName=".DisplayActivity"/>
+
+
     </application>
 
 </manifest>
