review will show up as red if left by admin, guards for admin reviews so they have to fill out everything

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
             android:label="Review Washroom"
             android:parentActivityName=".MainActivity"/>
         <activity android:name=".NormalUserAddReviewActivity"
-            android:label="Review Washroom"
+            android:label="Washroom Reviews"
             android:parentActivityName=".DisplayActivity"/>
 
 
