--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,14 @@ dependencies {
 
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation "androidx.fragment:fragment-ktx:1.5.4"
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.0.3')
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
 
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
